fix margin and nav z-index

--- a/src/css/achievment.scss
+++ b/src/css/achievment.scss
@@ -23,6 +23,7 @@
 
 .indicators .ind-inner p {
   font-size: 72px;
+  margin: 0;
 }
 
 .indicators .ind-inner p span {
