--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -65,6 +65,7 @@
 }
 
 .scroll-top .btn-scroll-top {
+  display: block;
   padding: 7px 10px;
   color: #fff;
   background-color: #7ba97e;
