--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -22,7 +22,7 @@ nav {
     top: 0;
     min-height: 90px;
     width: 100%;
-    z-index: 10;
+    z-index: 999999;
 
     .nav-wrapper {
         display: flex;
